--- a/.env.dev
+++ b/.env.dev
@@ -1,4 +1,11 @@
 PORT=3000
+
 GOOGLE_ID=
 GOOGLE_SECRET=
 GOOGLE_CALLBACK_URL=
+
+APPLE_CLIENT_ID=
+APPLE_TEAM_ID=
+APPLE_KEY_ID=
+APPLE_PRIVATE_KEY=
+APPLE_CALLBACK_URL=
