--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "dotenv": "^16.4.5",
     "passport": "^0.6.0",
+    "passport-apple": "^2.0.2",
     "passport-google-oauth20": "^2.0.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
